--- a/biometric-attendance-system/frontend/index.html
+++ b/biometric-attendance-system/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <script src="/WebSdk/index.js"></script>
+    <script src="/modules/WebSdk/index.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
