--- a/biometric-attendance-system/frontend/index.html
+++ b/biometric-attendance-system/frontend/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Fingerprint Scanner</title>
   </head>
   <body>
     <script src="/modules/WebSdk/index.js"></script>
+    <script src="https://localhost/WebSdk.min.js"></script>
+    <script type="module">
+  import { loadWebSdk } from '/src/utils/loadWebSdk.js';
+  loadWebSdk();
+</script>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
