--- a/biometric-attendance-system/frontend/index.html
+++ b/biometric-attendance-system/frontend/index.html
@@ -10,7 +10,7 @@
     <script src="/modules/WebSdk/index.js"></script>
     <script src="https://localhost/WebSdk.min.js"></script>
     <script type="module">
-  import { loadWebSdk } from '/src/utils/loadWebSdk.js';
+  import { loadWebSdk } from './src/utils/loadWebSdk.js';
   loadWebSdk();
 </script>
 
